--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,13 +1,9 @@
 <section>
-  <h1>Categories</h1>
+  <h2 class="text-center">Categories</h2>
   <% unless @categories.empty? %>
-    <p>Here is a list of all categories!</p>
-    <ul>
-      <% @categories.each do |category| %>
-        <li><%= category.id %> <%= category.name %></li>
-      <% end %>
-    </ul>
+    <%= render 'list' %>
   <% else %>
     <p>No categories available</p>
   <% end %>
+  <%= link_to 'Add a new category', new_category_path, class: 'btn bg-sec w-100 text-light' %>
 </section>
