--- a/app/views/pages/splash_screen.html.erb
+++ b/app/views/pages/splash_screen.html.erb
@@ -1,5 +1,5 @@
-<section>
-  <h1>The Wallet Detective 🔍</h1>
-  <%= link_to 'LOG IN', new_user_session_path %>
-  <%= link_to 'SIGN UP', new_user_registration_path %>
+<section class="d-flex flex-column">
+  <h1 class="m-auto">The Wallet Detective 🔍</h1>
+  <%= link_to 'LOG IN', new_user_session_path, class: 'btn bg-pri text-light mb-3' %>
+  <%= link_to 'SIGN UP', new_user_registration_path, class: 'btn text-secondary' %>
 </section>
