--- a/app/views/nav/_main.html.erb
+++ b/app/views/nav/_main.html.erb
@@ -7,7 +7,7 @@
         <%= link_to '<', categories_path, class: style %>
       <% end %>
     <% end %>
-    <h1 class="logo navbar-brand fs-5 fw-light text-light my-0 mx-auto">Wallet Inspector 🔍</h1>
+    <h1 class="logo navbar-brand fs-5 fw-light text-light my-0 mx-auto">Wallet Inspector <i class="fa-brands fa-searchengin"></i></h1>
     <% if current_user %>
       <%= link_to 'Sign out', destroy_user_session_path, class: 'btn bg-light' %>
     <% end %>
