--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,9 +1,9 @@
 <section>
-  <h2 class="text-center">Categories</h2>
+  <h2 class="text-center fw-bold">Categories</h2>
   <% unless @categories.empty? %>
     <%= render 'list' %>
   <% else %>
-    <p>No categories available</p>
+    <p class="fw-bold">No categories available</p>
   <% end %>
-  <%= link_to 'Add a new category', new_category_path, class: 'btn bg-sec w-100 text-light' %>
+  <%= link_to 'Add a new category', new_category_path, class: 'btn bg-sec w-100 text-light fw-bold' %>
 </section>
