--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,4 +1,4 @@
 <section>
-  <h2 class="text-center">Create a category</h2>
+  <h2 class="text-center fw-bold">Create a category</h2>
   <%= render 'form' %>
 </section>
