--- a/app/views/nav/_main.html.erb
+++ b/app/views/nav/_main.html.erb
@@ -2,12 +2,12 @@
   <div class="py-1 px-3 d-flex align-items-center w-100">
     <% if current_user %>
       <% if current_page?(controller: 'payments', action: 'new')%>
-      <%= link_to '<', :back, class: style %>
+      <%= link_to '<--', :back, class: style %>
       <% elsif !current_page?(controller: 'categories') %>
         <%= link_to '<', categories_path, class: style %>
       <% end %>
     <% end %>
-    <h1 class="logo navbar-brand fs-5 fw-light text-light my-0 mx-auto">Wallet Inspector <i class="fa-brands fa-searchengin"></i></h1>
+    <h1 class="logo navbar-brand fs-5 fw-bold text-light my-0 mx-auto"> Wallet Inspector  <i class="fa-brands fa-searchengin fa-2x text-white"></i> </h1>
     <% if current_user %>
       <%= link_to 'Sign out', destroy_user_session_path, class: 'btn bg-light' %>
     <% end %>
