--- a/app/views/pages/splash_screen.html.erb
+++ b/app/views/pages/splash_screen.html.erb
@@ -2,7 +2,7 @@
 
 
 <center>
-<div class="card" style="width: 40rem;">
+<div class="card custom-card" style="width: 40rem;">
 <span class="text-center">
 <div class="spinner-grow text-primary " role="status">
   <span class="sr-only">Loading...</span>
