--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,8 +4,18 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: "Proxima nova", system-ui, -apple-system, BlinkMacSystemFont,
-    "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
+  font-family:
+    "Proxima nova",
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    "Open Sans",
+    "Helvetica Neue",
     sans-serif;
   font-weight: 300;
   color: #434b54;
@@ -30,7 +40,7 @@ a {
   color: #252f3a !important;
 }
 
-main>section {
+main > section {
   min-height: 70vh;
 }
 
